# TurboTrail

./: .gitignore  LICENSE  readme.md
.github/workflows/: partial-client-test.yml  partial-lib-test.yml
client/: .gitignore  package.json  svelte.config.js
client/src/: app.html
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: constants.rs  globals.rs  main.rs  settings.rs
client/src-tauri/src/frontend/: emitter.rs  mod.rs  statusbar.rs
client/src-tauri/src/logparser/: chunk.rs  formatter.rs  logtype.rs  mod.rs  payload_factory.rs
client/src-tauri/src/storage/: exceptions.rs  init.rs  mod.rs  reader.rs  writer.rs
client/src-tauri/src/tcp/: emitter.rs  mod.rs  parser.rs  receiver.rs
client/src-tauri/src/utils/: concats.rs  mod.rs
client/src/lib/: data.ts
client/src/lib/components/: StatusBar.svelte
client/src/lib/components/console_tab/: Console.svelte  Header.svelte  LogEntry.svelte  LogPrint.svelte  Overview.svelte
client/src/lib/stores/: FilterStore.ts  LogStore.ts  VolumeStore.ts
client/src/lib/types/: console_tab.types.ts  event.types.ts  status.types.ts
client/src/routes/: +page.svelte
example/: settings.gradle
example/app/: build.gradle  logtypes.json
lib/: .gitignore  settings.gradle  settings.gradle.kts  vendorDependencyTurboTraceLib.json
lib/lib/: build.gradle  build.gradle.kts
preprocessor/: settings.gradle
preprocessor/plugin/: build.gradle  buildtime.gradle
tools/scripts/: lint-client.bat  lint-client.sh
tools/turbotrace-roborio-emulator/: art.py  constants.py  main.py  payload.py  utils.py
(+50 files in other folders)
