[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Wrench56"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }

once_cell = "1.19.0"
ringbuf = "0.3.3"
const_format = "0.2.32"
log = "0.4"
fern = "0.7.0"
chrono = "0.4.38"
lazy_static = "1.4.0"
sysinfo = "0.32.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]


# Linting
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Groups
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

print_stdout = { level = "deny", priority = 1 }
